--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server --ignore client"
+    "dev": "nodemon server --ignore client",
+    "build": "npm install --prefix client && run build --prefix client",
+    "start": "node server/index.js"
   },
   "keywords": [],
   "author": "",
